// Vitest Snapshot v1

exports[`components/Card.vue > ({ title: 'title', variant: 'danger', collapsible: true, open: false }) snapshot test 1`] = `
<div
  class="o-clps card"
  data-v-29c414df=""
>
  <div
    class="o-clps__trigger"
  >
    <header
      aria-controls="title"
      class="card-header is-danger"
      data-v-29c414df=""
      role="button"
    >
      <div
        class="card-header-title"
        data-v-29c414df=""
      >
        title
      </div>
      <a
        class="card-header-icon"
        data-v-29c414df=""
      >
        <span
          class="icon"
          data-v-29c414df=""
        >
          <i
            class="mdi mdi-menu-down mdi-24px"
          />
        </span>
      </a>
    </header>
  </div>
  <transition-stub
    appear="false"
    css="true"
    name="slide"
    persisted="false"
  >
    <div
      class="o-clps__content"
      id="title"
      style="display: none;"
    >
      
      
    </div>
  </transition-stub>
</div>
`;

exports[`components/Card.vue > ({ title: 'title', variant: 'info', collapsible: true, open: true }) snapshot test 1`] = `
<div
  class="o-clps card"
  data-v-29c414df=""
>
  <div
    class="o-clps__trigger"
  >
    <header
      aria-controls="title"
      class="card-header is-info"
      data-v-29c414df=""
      role="button"
    >
      <div
        class="card-header-title"
        data-v-29c414df=""
      >
        title
      </div>
      <a
        class="card-header-icon"
        data-v-29c414df=""
      >
        <span
          class="icon"
          data-v-29c414df=""
        >
          <i
            class="mdi mdi-menu-up mdi-24px"
          />
        </span>
      </a>
    </header>
  </div>
  <transition-stub
    appear="false"
    css="true"
    name="slide"
    persisted="false"
  >
    <div
      class="o-clps__content"
      id="title"
    >
      
      
    </div>
  </transition-stub>
</div>
`;

exports[`components/Card.vue > ({ title: 'title', variant: 'primary' }) snapshot test 1`] = `
<div
  animation="slide"
  aria-id="title"
  class="card"
  data-v-29c414df=""
>
  <header
    aria-controls="title"
    class="card-header is-primary"
    data-v-29c414df=""
  >
    <div
      class="card-header-title"
      data-v-29c414df=""
    >
      title
    </div>
  </header>
  
  
</div>
`;
